# avail-research-road-network-resiliency

./: .gitignore  LICENSE  README.md  pyproject.toml  template.env
common/: constants.py
common/fema/floodplains/: core.py
common/nysdot/structures/: nysdot_bridges.py  nysdot_large_culverts.py
common/osm/: README.md  __init__.py  analyze.py  enrich.py  extract.py
common/osrm/: osrm_matching_logic.py
common/us_census/tiger/: utils.py
common/utils/: logging.py
config/: .gitignore  template.env
docker/run/: .gitignore  README.md  compose.yml  down  init  osrm-up  osrm_preprocess_data  rnr-analysis-up  ssh_into_rnr-analysis  sync_rnr-analysis_venv  up
experiments/001.002_pjt_utah_redundancy/tasks/: compute_redundancy_prefect_workflow.py
experiments/008.001_pjt_networkx_centrality/: run.sh
experiments/008.001_pjt_networkx_centrality/documentation/: e008_001_methodology.md
experiments/008.001_pjt_networkx_centrality/src/: calculate_metrics.py
experiments/009_001_pjt_osm_ris_conflation/: run.sh
experiments/e001_pjt_utah_redundancy/: __init__.py  run.sh
experiments/e004_pjt_flood_impact/: __init__.py  run.sh
experiments/e004_pjt_flood_impact/src/: core_logic.py  (+1 more)
experiments/e007_pjt_transcom_flooding_events/: __init__.py  run.sh
experiments/e008_001_pjt_networkx_centrality/: run.sh
experiments/e008_pjt_networkx_centrality/: __init__.py
experiments/e009_pjt_osm_ris_conflation/: __init__.py  run.sh
tasks/core/: complete_prefect_workflow.py  full.ipynb  full.py  prefect_tasks.py
tasks/osm/: __init__.py  tasks.py
tasks/osrm/: __init__.py  preprocess  tasks.py
(+39 files in other folders)
