[project]
name = "avail-research-road-network-resiliency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "geoalchemy2>=0.17.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "osmnx>=2.0.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pyrosm>=0.6.2",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
