[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avail-research-road-network-resiliency"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "duckdb==1.1.3",
    "gdal==3.6.4",
    "geoalchemy2>=0.17.0",
    "geopandas>=1.0.1",
    "libpysal>=4.13.0",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "osmnx>=2.0.1",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "plotly>=6.0.0",
    "prefect>=3.3.5",
    "psycopg2>=2.9.10",
    "pyrosm>=0.6.2",
    "python-dotenv>=1.0.1",
    "rapidfuzz>=3.12.2",
    "rasterio>=1.4.3",
    "ruff>=0.9.4",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.37",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "usaddress>=0.5.13",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = ["common"]
